--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ node_js:
 os: linux
 
 env:
+  - ESLINT_VERSION=6
   - ESLINT_VERSION=5
   - ESLINT_VERSION=4
   - ESLINT_VERSION=3
@@ -49,7 +50,9 @@ matrix:
   exclude:
   - node_js: '4'
     env: ESLINT_VERSION=5
-  
+  - node_js: '4'
+    env: ESLINT_VERSION=6
+
   fast_finish: true
   allow_failures:
   # issues with typescript deps in this version intersection
