--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,12 @@
 configuration:
   - Native
-  - WSL
+  #- WSL
 
 # Test against this version of Node.js
 environment:
   matrix:
+    - nodejs_version: "20"
+    - nodejs_version: "18"
     - nodejs_version: "16"
     - nodejs_version: "14"
     - nodejs_version: "12"
